# flint

./: .gitignore  README.md  pyproject.toml  tests.sh
.github/workflows/: tests.yml
flint/: __init__.py  auth.py  hooks.py  run.py  user.py
flint/commands/: __init__.py  auth.py  commands.py  user.py
flint/hooks/: authenticate.py
flint/tests/: __init__.py  test_commands.py
flint/utils/: __init__.py  auth.py  data.py  log.py
